--- a/config/application.yml
+++ b/config/application.yml
@@ -14,3 +14,7 @@
 STRIPE_API_KEY: sk_test_OXgdfz0w0U80Ju0B1CBVBk9W
 publishable_key: pk_test_ZNWQ9H8TrCu5RDg3ebtHF2vU
 signing_secret: whsec_VI53kzuhKLJPZR7aLjVZ7MzKgiu80Zyw
+
+access_key_id: AKIAWQ6UFBRSQMAWLZ
+secret_access_key: tuDuWK5+JiY3KfFrGNoJBTz/YMABptlRlTgCYr
+bucket: r6pr
